--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
-astroid==2.9.3
-autopep8==1.6.0
-Django==2.2.12
+asgiref==3.5.0
+Django==4.0.3
 django-braces==1.15.0
-django-cleanup==6.0.0
 django-crispy-forms==1.14.0
-isort==5.10.1
-lazy-object-proxy==1.7.1
-mccabe==0.6.1
-platformdirs==2.5.1
-pycodestyle==2.8.0
-pylint==2.12.2
-pytz==2021.3
 sqlparse==0.4.2
-toml==0.10.2
-wrapt==1.13.3
